# esp-idf-xensiv-tlx493d

./: .gitmodules  CMakeLists.txt  README.md  idf_component.yml
include/: esp_tlx493d.h  tlx493d.h  tlx493d_enums.h  tlx493d_types.h
port/: esp_tlx493d_com_iic.c  esp_tlx493d_com_interface.c  esp_tlx493d_logger.c
port/include/: esp_tlx493d_base_types.h  esp_tlx493d_com_iic.h
private_include/: communication_if.h  logger.h  pal.h  tlx493d_common.h  tlx493d_g1_common_defines.h  tlx493d_g2_common.h  tlx493d_g2_common_defines.h  tlx493d_g3_common.h  tlx493d_g3_common_defines.h
private_include/models/: TLx493D_A1B6.h  TLx493D_A1B6_defines.h  TLx493D_A1B6_enums.h  TLx493D_A2B6.h  TLx493D_A2B6_defines.h  TLx493D_A2B6_enums.h  TLx493D_A2BW.h  TLx493D_A2BW_defines.h  TLx493D_A2BW_enums.h  TLx493D_P2B6.h  TLx493D_P2B6_defines.h  TLx493D_P2B6_enums.h  TLx493D_P3B6.h  TLx493D_P3B6_defines.h  TLx493D_P3B6_enums.h  TLx493D_P3I8.h  TLx493D_P3I8_defines.h  TLx493D_P3I8_enums.h  TLx493D_W2B6.h  TLx493D_W2B6_defines.h  TLx493D_W2B6_enums.h  TLx493D_W2BW.h  TLx493D_W2BW_defines.h  TLx493D_W2BW_enums.h
src/: logger.c  tlx493d.c
src/common/: tlx493d_common.c  tlx493d_g2_common.c
src/models/: TLx493D_A1B6.c
